# rustash_server

./: .gitignore  Cargo.toml  README.md  config.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20260602_104733_create_file_type_table.rs  m20260602_104805_create_file_table.rs  m20260602_140058_create_storage_root_table.rs  m20260602_150000_add_storage_root_id_to_file.rs  m20260603_000001_add_hash_to_file.rs
src/: config.rs  error.rs  lib.rs  main.rs  pagination.rs  route.rs  scanner.rs
src/entity/: file.rs  file_type.rs  mod.rs  prelude.rs  storage_root.rs
src/handler/: file_handler.rs  file_type_handler.rs  mod.rs  scanner_handler.rs  storage_root_handler.rs  stream_handler.rs
src/service/: file_service.rs  file_type_service.rs  mod.rs  storage_root_service.rs
web/: package.json
web/app/: axios.ts  routes.ts
web/app/routes/: setting.tsx
web/app/setting/: index.tsx
web/app/welcome/: welcome.tsx
