[package]
name = "rustash_server"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
axum = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio", "macros", "with-chrono", "with-uuid" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "1.1.2"
tower-http = { version = "0.5", features = ["fs", "cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
walkdir = "2.4"
thiserror = "2.0.18"
shellexpand = "3.1.2"
sha2 = "0.11.0"
